--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,12 +17,13 @@
 ;==========================================================
 
 [colors]
-background = #363740
-foreground = #eceff1
-primary = #ff9800
-secondary = #81d4fa
-alert = #e91e63
-disabled = #707880
+background = #282c34
+foreground = #abb2bf
+highlight = #e06c75
+primary = #61afef
+secondary = #d19a66
+alert = #c678dd
+disabled = #abb2bf
 
 [bar/bar1]
 monitor = DP-1
@@ -121,11 +122,11 @@ label-empty-font = 2
 
 label-focused = %icon%
 label-focused-padding = 1
-label-focused-foreground = #ff9800
+label-focused-foreground = ${colors.highlight}
 
 label-occupied = %icon%
 label-occupied-padding = 1
-label-occupied-foreground = #03a9f4
+label-occupied-foreground = ${colors.primary}
 
 label-urgent = %icon%
 label-urgent-background = ${colors.alert}
