--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -61,7 +61,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-;tray-position = right
+tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -105,7 +105,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-position = right
+;tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -244,15 +244,16 @@ label-volume-foreground = ${colors.secondary}
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
+click-middle = pavucontrol
 click-right = ~/.config/polybar/scripts/audio.sh swapOutput
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = ""
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 format-prefix-font = 3
-label = %percentage_used:2%%
+label = %used%
 label-foreground = ${colors.secondary}
 
 [module/cpu]
