--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,7 +27,8 @@ disabled = #abb2bf
 
 [bar/bar1]
 monitor = DP-1
-width = 100%
+width = 90%
+offset-x = 5%
 height = 24pt
 font = 0
 
@@ -39,6 +40,8 @@ foreground = ${colors.foreground}
 line-size = 3pt
 
 border-bottom-size = 2
+border-right-size = 2
+border-left-size = 2
 border-color = #666666
 
 padding-left = 1
@@ -46,15 +49,16 @@ padding-right = 1
 
 module-margin = 1
 
-separator = 
-separator-foreground = ${colors.foreground}
+separator = 
+separator-foreground = ${colors.highlight}
 
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm xwindow
-modules-right = updates-arch wlan pulseaudio date
+modules-center = date
+modules-right = updates-arch wlan pulseaudio  
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -64,14 +68,15 @@ enable-ipc = true
 tray-position = right
 
 ; wm-restack = generic
-; wm-restack = bspwm
+wm-restack = bspwm
 ; wm-restack = i3
 
 ; override-redirect = true
 
 [bar/bar2]
 monitor = HDMI-0
-width = 100%
+width = 90%
+offset-x = 5%
 height = 24pt
 
 ; dpi = 96
@@ -83,6 +88,8 @@ line-size = 3pt
 
 
 border-bottom-size = 2
+border-right-size = 2
+border-left-size = 2
 border-color = #666666
 
 padding-left = 1
@@ -90,15 +97,16 @@ padding-right = 1
 
 module-margin = 1
 
-separator = 
-separator-foreground = ${colors.foreground}
+separator = 
+separator-foreground = ${colors.highlight}
 
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm
-modules-right = temperature filesystem cpu memory date
+modules-center = date
+modules-right = temperature filesystem cpu memory powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -108,7 +116,7 @@ enable-ipc = true
 ;tray-position = right
 
 ; wm-restack = generic
-; wm-restack = bspwm
+wm-restack = bspwm
 ; wm-restack = i3
 
 ; override-redirect = true
@@ -178,7 +186,8 @@ icon-5 = e;
 icon-default = 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:20:...%
+label-foreground = ${colors.highlight}
 
 [module/temperature]
 type = internal/temperature
@@ -301,6 +310,34 @@ date = %h %d, %I:%M
 label = %date%
 label-foreground = ${colors.secondary}
 
+[module/powermenu]
+type = custom/menu
+
+format-foreground = ${colors.primary}
+format-background = ${colors.xcolor0}
+
+
+label-open = "⏻"
+label-foreground = ${colors.secondary}
+label-open-font = 4
+label-close = ""
+label-close-foreground = ${colors.primary}
+label-separator = " | "
+label-separator-foreground = ${colors.highlight}
+
+
+; reboot
+menu-0-1 = " Reboot"
+menu-0-1-exec = systemctl reboot
+menu-0-1-foreground = ${colors.secondary}
+; shutdown
+menu-0-0 = " Shutdown"
+menu-0-0-exec = systemctl poweroff
+menu-0-0-foreground = ${colors.secondary}
+; sleep
+menu-0-2 = "⏾ Sleep"
+menu-0-2-exec = systemctl suspend
+menu-0-2-foreground = ${colors.secondary}
 
 [settings]
 screenchange-reload = true
