--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -160,7 +160,7 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
+# blur-method = dual_kawase
 # blur-size = 12
 #
 # blur-deviation = false
@@ -426,5 +426,5 @@ wintypes:
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
-  dropdown_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 1; }
 };
