--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -210,6 +210,7 @@ label = %output%
 label-foreground = ${colors.secondary}
 interval = 600
 click-left = ~/.config/polybar/scripts/pacman.sh
+click-right = ~/.config/polybar/scripts/pacman.sh
 
 ;[module/updates-arch]
 ;type = custom/script
