--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -39,7 +39,7 @@ foreground = ${colors.foreground}
 line-size = 3pt
 
 border-bottom-size = 2
-border-color = #666666
+border-color = ${colors.primary}
 
 padding-left = 1
 padding-right = 1
@@ -55,7 +55,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm xwindow
 modules-center = date
-modules-right = updates-arch wlan pulseaudio powermenu
+modules-right = updates-arch wlan audio powermenu 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -86,7 +86,7 @@ line-size = 3pt
 
 
 border-bottom-size = 2
-border-color = #666666
+border-color = ${colors.primary}
 
 padding-left = 1
 padding-right = 1
@@ -209,8 +209,7 @@ format-prefix-foreground = ${colors.primary}
 label = %output%
 label-foreground = ${colors.secondary}
 interval = 600
-click-left = ~/.config/polybar/scripts/pacman.sh
-click-right = ~/.config/polybar/scripts/pacman.sh
+click-left = exec ~/.config/polybar/scripts/pacman.sh
 
 ;[module/updates-arch]
 ;type = custom/script
@@ -228,7 +227,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-format-mounted-prefix = " "
+format-mounted-prefix = "󰋊 "
 format-mounted-prefix-foreground = ${colors.primary}
 format-mounted-prefix-font = 3
 label-mounted = %percentage_used%%
@@ -249,9 +248,9 @@ label-volume = %percentage%%
 label-volume-foreground = ${colors.secondary}
 
 label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-muted-foreground = ${colors.secondary}
 
-click-middle = pavucontrol
+click-middle = pavucontrol &
 click-right = ~/.config/polybar/scripts/audio.sh swapOutput
 
 [module/memory]
@@ -337,6 +336,35 @@ menu-0-0-foreground = ${colors.secondary}
 menu-0-2 = "⏾ Sleep"
 menu-0-2-exec = systemctl suspend
 menu-0-2-foreground = ${colors.secondary}
+
+; [module/audio]
+; type = custom/ipc
+; label = "%output%"
+; 
+; hook-0 = ~/.config/polybar/scripts/newaudio.sh
+; hook-1 = ~/.config/polybar/scripts/newaudio.sh up
+; hook-2 = ~/.config/polybar/scripts/newaudio.sh down
+; hook-3 = ~/.config/polybar/scripts/newaudio.sh mute
+; hook-4 = ~/.config/polybar/scripts/newaudio.sh swap
+; initial = 1
+; 
+; scroll-up = exec polybar-msg  "#audio.hook.1"
+; scroll-down = exec polybar-msg  "#audio.hook.2"
+; click-left = exec polybar-msg  "#audio.hook.3"
+; click-right = exec polybar-msg  "#audio.hook.4"
+; click-middle = exec pavucontrol &
+
+[module/audio]
+type = custom/script
+label = "%output%"
+label-font = 1
+interval = 2.0
+exec = ~/.config/polybar/scripts/newaudio.sh
+click-left = ~/.config/polybar/scripts/newaudio.sh mute &
+click-middle = exec pavucontrol &
+click-right = ~/.config/polybar/scripts/newaudio.sh swap &
+scroll-up = ~/.config/polybar/scripts/newaudio.sh up &
+scroll-down = ~/.config/polybar/scripts/newaudio.sh down &
 
 [settings]
 screenchange-reload = true
