--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,6 +16,8 @@
 ;
 ;==========================================================
 
+include-file = mods.polybar
+
 [colors]
 background = #282c34
 foreground = #abb2bf
@@ -116,258 +118,3 @@ wm-restack = bspwm
 ; wm-restack = i3
 
 ; override-redirect = true
-
-[module/bspwm]
-type = internal/bspwm
-label-focused-font = 2
-label-occupied-font = 2
-label-urgent-font = 2
-label-empty-font = 2
-
-label-focused = %icon%
-label-focused-padding = 1
-label-focused-foreground = ${colors.highlight}
-
-label-occupied = %icon%
-label-occupied-padding = 1
-label-occupied-foreground = ${colors.primary}
-
-label-urgent = %icon%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %icon%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-ws-icon-0 = I;
-ws-icon-1 = II;
-ws-icon-2 = III;
-ws-icon-3 = IV;
-ws-icon-4 = q;
-ws-icon-5 = e;
-ws-icon-default = 
-
-[module/xworkspaces]
-type = internal/xworkspaces
-pin-workspaces = true
-label-active-font = 2
-label-occupied-font = 2
-label-urgent-font = 2
-label-empty-font = 2
-format = <label-state>
-
-label-active = %icon%
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %icon%
-label-occupied-foreground = ${colors.primary}
-label-occupied-padding = 1
-
-label-urgent = %icon%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %icon%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-icon-0 = I;
-icon-1 = II;
-icon-2 = III;
-icon-3 = IV;
-icon-4 = q;
-icon-5 = e;
-icon-default = 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:20:...%
-label-foreground = ${colors.highlight}
-
-[module/temperature]
-type = internal/temperature
-base-temperature=20
-warn-temperature=75
-format = <ramp> <label>
-label = %temperature-c%
-label-foreground = ${colors.secondary}
-label-warn-foreground = ${colors.alert}
-ramp-0 = ""
-ramp-1 = ""
-ramp-2 = ""
-ramp-foreground = ${colors.primary}
-hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp3_input
-
-[module/updates-arch]
-type = custom/script
-exec = ~/.config/polybar/scripts/pacman.sh
-format = <label>
-format-prefix = " "
-format-prefix-font = 3
-format-prefix-foreground = ${colors.primary}
-label = %output%
-label-foreground = ${colors.secondary}
-interval = 600
-click-left = exec ~/.config/polybar/scripts/pacman.sh
-
-;[module/updates-arch]
-;type = custom/script
-;exec = ~/.config/polybar/scripts/updates-arch.sh
-;format = <label>
-;format-prefix = " "
-;format-prefix-font = 3
-;format-prefix-foreground = ${colors.primary}
-;label = %output%
-;label-foreground = ${colors.secondary}
-;interval = 600
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-format-mounted-prefix = "󰋊 "
-format-mounted-prefix-foreground = ${colors.primary}
-format-mounted-prefix-font = 3
-label-mounted = %percentage_used%%
-label-mounted-foreground = ${colors.secondary}
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "墳 "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume-prefix-font = 3
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-label-volume-foreground = ${colors.secondary}
-
-label-muted = muted
-label-muted-foreground = ${colors.secondary}
-
-click-middle = pavucontrol &
-click-right = ~/.config/polybar/scripts/audio.sh swapOutput
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-format-prefix-font = 3
-label = %used%
-label-foreground = ${colors.secondary}
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = ""
-format-prefix-foreground = ${colors.primary}
-format-prefix-font = 3
-label = %percentage:2%%
-label-foreground = ${colors.secondary}
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-format-connected-prefix = "直 "
-format-connected-prefix-foreground = ${colors.primary}
-format-connected-prefix-font = 3
-label-connected = %essid%
-label-connected-foreground = ${colors.secondary}
-format-disconnected-prefix = "睊 "
-format-disconnected-prefix-foreground = ${colors.primary}
-format-disconnected-prefix-font = 3
-label-disconnected = %essid%
-label-disconnected-foreground = ${colors.secondary}
-interval = 5
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
-[module/date]
-type = internal/date
-interval = 1
-
-date = %h %d, %I:%M
-
-label = %date%
-label-foreground = ${colors.secondary}
-
-[module/powermenu]
-type = custom/menu
-
-format-foreground = ${colors.primary}
-format-background = ${colors.xcolor0}
-
-
-label-open = "⏻"
-label-foreground = ${colors.secondary}
-label-open-font = 4
-label-close = ""
-label-close-foreground = ${colors.primary}
-label-separator = " | "
-separator-foreground = ${colors.highlight}
-label-separator-foreground = ${colors.highlight}
-
-
-; reboot
-menu-0-1 = " Reboot"
-menu-0-1-exec = systemctl reboot
-menu-0-1-foreground = ${colors.secondary}
-; shutdown
-menu-0-0 = " Shutdown"
-menu-0-0-exec = systemctl poweroff
-menu-0-0-foreground = ${colors.secondary}
-; sleep
-menu-0-2 = "⏾ Sleep"
-menu-0-2-exec = systemctl suspend
-menu-0-2-foreground = ${colors.secondary}
-
-; [module/audio]
-; type = custom/ipc
-; label = "%output%"
-; 
-; hook-0 = ~/.config/polybar/scripts/newaudio.sh
-; hook-1 = ~/.config/polybar/scripts/newaudio.sh up
-; hook-2 = ~/.config/polybar/scripts/newaudio.sh down
-; hook-3 = ~/.config/polybar/scripts/newaudio.sh mute
-; hook-4 = ~/.config/polybar/scripts/newaudio.sh swap
-; initial = 1
-; 
-; scroll-up = exec polybar-msg  "#audio.hook.1"
-; scroll-down = exec polybar-msg  "#audio.hook.2"
-; click-left = exec polybar-msg  "#audio.hook.3"
-; click-right = exec polybar-msg  "#audio.hook.4"
-; click-middle = exec pavucontrol &
-
-[module/audio]
-type = custom/script
-label = "%output%"
-label-font = 1
-interval = 2.0
-exec = ~/.config/polybar/scripts/newaudio.sh
-click-left = ~/.config/polybar/scripts/newaudio.sh mute &
-click-middle = exec pavucontrol &
-click-right = ~/.config/polybar/scripts/newaudio.sh swap &
-scroll-up = ~/.config/polybar/scripts/newaudio.sh up &
-scroll-down = ~/.config/polybar/scripts/newaudio.sh down &
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
-
-; vim:ft=dosini
