--- a/starship.toml
+++ b/starship.toml
@@ -32,9 +32,9 @@ symbol = ''
 format = "[[($conflicted$untracked$modified$staged$renamed$deleted)](#e06c75) ($ahead_behind$stashed)]($style)"
 style = "cyan"
 conflicted = " "
-untracked = "ﰜ " 
-modified = "ﰚ "
-staged = "ﰗ "
+untracked = "󰜛 " 
+modified = "󰜜 "
+staged = "󰜘 "
 renamed = "​"
 deleted = "​"
 stashed = "≡ "
