--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -19,7 +19,7 @@
 include-file = mods.polybar
 
 [colors]
-background = #282c34
+background = #aa282c34
 foreground = #abb2bf
 highlight = #e06c75
 primary = #61afef
@@ -29,8 +29,11 @@ disabled = #abb2bf
 
 [bar/bar1]
 monitor = DP-5
-width = 100%
+width = 98%
 height = 24pt
+offset-x = 1%
+offset-y = 1%
+radius = 9
 font = 0
 
 ; dpi = 96
@@ -40,16 +43,16 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-bottom-size = 2
-border-color = ${colors.primary}
+# border-bottom-size = 2
+# border-color = ${colors.primary}
 
 padding-left = 1
 padding-right = 1
 
-module-margin = 1
+module-margin = 0
 
-separator = 
-separator-foreground = ${colors.highlight}
+# separator = 
+# separator-foreground = ${colors.highlight}
 
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
@@ -57,7 +60,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm xwindow
 modules-center = date
-modules-right = updates-arch wlan audio powermenu 
+modules-right = spotify spotify-prev spotify-play spotify-next spacer audio spacer pulseaudio spacer powermenu spacer
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -65,7 +68,7 @@ cursor-scroll = ns-resize
 enable-ipc = true
 
 tray-position = right
-tray-right-margin = 10
+# tray-right-margin = 10
 
 ; wm-restack = generic
 wm-restack = bspwm
@@ -75,8 +78,11 @@ wm-restack = bspwm
 
 [bar/bar2]
 monitor = DP-3
-width = 100%
+width = 98%
 height = 24pt
+offset-x = 1%
+offset-y = 1%
+radius = 9
 font = 0
 
 ; dpi = 96
@@ -87,8 +93,8 @@ foreground = ${colors.foreground}
 line-size = 3pt
 
 
-border-bottom-size = 2
-border-color = ${colors.primary}
+# border-bottom-size = 2
+# border-color = ${colors.primary}
 
 padding-left = 1
 padding-right = 1
@@ -104,7 +110,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm
 modules-center = date
-modules-right = temperature cpu memory filesystem
+modules-right = updates-arch temperature cpu memory filesystem
 
 cursor-click = pointer
 cursor-scroll = ns-resize
