--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -58,9 +58,9 @@ font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 
-modules-left = bspwm xwindow
+modules-left = bspwm spacer xwindow
 modules-center = date
-modules-right = spotify spotify-prev spotify-play spotify-next spacer audio spacer pulseaudio spacer powermenu spacer
+modules-right = spotify-prev spotify-play spotify-next spacer audio spacer pulseaudio spacer powermenu 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -108,7 +108,7 @@ font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 
-modules-left = bspwm
+modules-left = bspwm spotify
 modules-center = date
 modules-right = updates-arch temperature cpu memory filesystem
 
