--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -60,7 +60,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm spacer xwindow
 modules-center = date
-modules-right = spotify-prev spotify-play spotify-next spacer audio spacer pulseaudio spacer powermenu 
+modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer powermenu 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
