--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -103,7 +103,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-#inactive-opacity = 1;
+# inactive-opacity = 1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -133,10 +133,11 @@ fade-out-step = 0.03;
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-#  opacity-rule = [
-#	"90:class_g = 'Alacritty'", 
-#	"90:class_g = 'Nemo'" 
-#];
+  opacity-rule = [
+	"90:class_g = 'Alacritty'", 
+    "90:class_g = 'kitty'",
+	"90:class_g = 'Nemo'" 
+];
 
 
 #################################
