--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,6 +1,5 @@
 ;==========================================================
 ;
-;
 ;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
 ;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
 ;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
@@ -8,32 +7,26 @@
 ;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
 ;==========================================================
 
-include-file = mods.polybar
+include-file = modules.ini
 
 [colors]
 background = #aa282c34
-foreground = #abb2bf
-highlight = #e06c75
-primary = #61afef
-secondary = #d19a66
+foreground = #bbc2cf
+highlight = #ff6c6b
+primary = #51afef
+secondary = #ecbe7b
 alert = #c678dd
-disabled = #abb2bf
+disabled = #abb2bf 
 
 [bar/bar1]
 monitor = DP-5
-width = 98%
+width = 100%
 height = 24pt
-offset-x = 1%
-offset-y = 1%
-radius = 9
+;offset-x = 1%
+;offset-y = 1%
+;radius = 9
 font = 0
 
 ; dpi = 96
@@ -43,8 +36,8 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-# border-bottom-size = 2
-# border-color = ${colors.primary}
+border-bottom-size = 1
+border-color = ${colors.disabled}
 
 padding-left = 1
 padding-right = 1
@@ -78,11 +71,11 @@ wm-restack = bspwm
 
 [bar/bar2]
 monitor = DP-3
-width = 98%
+width = 100%
 height = 24pt
-offset-x = 1%
-offset-y = 1%
-radius = 9
+;offset-x = 1%
+;offset-y = 1%
+;radius = 9
 font = 0
 
 ; dpi = 96
@@ -93,24 +86,24 @@ foreground = ${colors.foreground}
 line-size = 3pt
 
 
-# border-bottom-size = 2
-# border-color = ${colors.primary}
+border-bottom-size = 1
+border-color = ${colors.disabled}
 
 padding-left = 1
 padding-right = 1
 
-module-margin = 1
+module-margin = 0
 
-separator = 
-separator-foreground = ${colors.highlight}
+;separator = 
+;separator-foreground = ${colors.highlight}
 
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 
-modules-left = bspwm spotify
+modules-left = bspwm spacer spotify
 modules-center = date
-modules-right = updates-arch temperature cpu memory filesystem
+modules-right = updates-arch spacer temperature spacer cpu spacer memory spacer filesystem
 
 cursor-click = pointer
 cursor-scroll = ns-resize
