--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -13,15 +13,25 @@ include-file = modules.ini
 
 [colors]
 background = #aa282c34
-foreground = #bbc2cf
-highlight = #ff6c6b
-primary = #51afef
-secondary = #ecbe7b
-alert = #c678dd
-disabled = #abb2bf 
+black = #282c34
+white = #bbc2cf
+red = #ff6c6b
+blue = #51afef
+yellow = #ecbe7b
+purple = #c678dd
+gray = #abb2bf 
+
+# background = #aa282c34
+# background2 = #282c34
+# foreground = #bbc2cf
+# highlight = #ff6c6b
+# primary = #51afef
+# secondary = #ecbe7b
+# alert = #c678dd
+# disabled = #abb2bf 
 
 [bar/bar1]
-monitor = DP-5
+monitor = DP-3
 width = 100%
 height = 24pt
 ;offset-x = 1%
@@ -32,12 +42,12 @@ font = 0
 ; dpi = 96
 
 background = ${colors.background}
-foreground = ${colors.foreground}
+foreground = ${colors.white}
 
 line-size = 3pt
 
 border-bottom-size = 1
-border-color = ${colors.disabled}
+border-color = ${colors.red}
 
 padding-left = 1
 padding-right = 1
@@ -70,7 +80,7 @@ wm-restack = bspwm
 ; override-redirect = true
 
 [bar/bar2]
-monitor = DP-3
+monitor = DP-1
 width = 100%
 height = 24pt
 ;offset-x = 1%
@@ -81,13 +91,13 @@ font = 0
 ; dpi = 96
 
 background = ${colors.background}
-foreground = ${colors.foreground}
+foreground = ${colors.white}
 
 line-size = 3pt
 
 
 border-bottom-size = 1
-border-color = ${colors.disabled}
+border-color = ${colors.red}
 
 padding-left = 1
 padding-right = 1
@@ -95,7 +105,7 @@ padding-right = 1
 module-margin = 0
 
 ;separator = 
-;separator-foreground = ${colors.highlight}
+;separator-foreground = ${colors.red}
 
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
