--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -22,18 +22,18 @@ label-empty-font = 2
 
 label-focused = %icon%
 label-focused-padding = 1
-label-focused-foreground = ${colors.highlight}
+label-focused-foreground = ${colors.red}
 
 label-occupied = %icon%
 label-occupied-padding = 1
-label-occupied-foreground = ${colors.primary}
+label-occupied-foreground = ${colors.blue}
 
 label-urgent = %icon%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.purple}
 label-urgent-padding = 1
 
 label-empty = %icon%
-label-empty-foreground = ${colors.disabled}
+label-empty-foreground = ${colors.gray}
 label-empty-padding = 1
 
 ws-icon-0 = 1;󰎤
@@ -47,7 +47,7 @@ ws-icon-default = 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
-label-foreground = ${colors.secondary}
+label-foreground = ${colors.yellow}
 
 ;================================
 ;   System Monitoring 
@@ -59,9 +59,9 @@ exec = ~/.config/polybar/scripts/pacman.sh
 format = <label>
 format-prefix = "󰮯 "
 format-prefix-font = 3
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.blue}
 label = %output%
-label-foreground = ${colors.secondary}
+label-foreground = ${colors.yellow}
 interval = 600
 click-left = exec ~/.config/polybar/scripts/pacman.sh
 
@@ -72,31 +72,31 @@ warn-temperature=75
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
 label = %temperature-c%
-label-foreground = ${colors.secondary}
-label-warn-foreground = ${colors.alert}
+label-foreground = ${colors.yellow}
+label-warn-foreground = ${colors.purple}
 ramp-0 = ""
 ramp-1 = ""
 ramp-2 = ""
-ramp-foreground = ${colors.primary}
+ramp-foreground = ${colors.blue}
 hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp3_input
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = ""
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
 label = %percentage:2%%
-label-foreground = ${colors.secondary}
+label-foreground = ${colors.yellow}
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = "󰍛 "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
 label = %used%
-label-foreground = ${colors.secondary}
+label-foreground = ${colors.yellow}
 
 [module/filesystem]
 type = internal/fs
@@ -104,13 +104,13 @@ interval = 25
 
 mount-0 = /
 format-mounted-prefix = "󰋊 "
-format-mounted-prefix-foreground = ${colors.primary}
+format-mounted-prefix-foreground = ${colors.blue}
 format-mounted-prefix-font = 3
 label-mounted = %percentage_used%%
-label-mounted-foreground = ${colors.secondary}
+label-mounted-foreground = ${colors.yellow}
 
 label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+label-unmounted-foreground = ${colors.gray}
 
 
 ;================================
@@ -121,15 +121,15 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/pulseaudio
 
 format-volume-prefix = "󰕾 "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix-foreground = ${colors.blue}
 format-volume-prefix-font = 3
 format-volume = <label-volume>
 
 label-volume = %percentage%%
-label-volume-foreground = ${colors.secondary}
+label-volume-foreground = ${colors.yellow}
 
 label-muted = muted
-label-muted-foreground = ${colors.secondary}
+label-muted-foreground = ${colors.yellow}
 
 click-middle = pavucontrol &
 click-right = ~/.config/polybar/scripts/audio.sh swapOutput
@@ -152,14 +152,14 @@ type = custom/script
 interval = 1
 format = <label>
 exec = ~/.config/polybar/scripts/song-playing.sh
-format-foreground = ${colors.secondary}
+format-foreground = ${colors.yellow}
 
 [module/spotify-prev]
 type = custom/script
 exec = echo " 󰒮 "
 format = <label>
 click-left = spt pb --previous
-format-foreground = ${colors.primary}
+format-foreground = ${colors.blue}
 
 [module/spotify-play]
 type = custom/script
@@ -167,14 +167,14 @@ exec = echo "󰐎"
 format = <label>
 click-left = spt pb --toggle
 click-right = ~/.config/polybar/scripts/spotifyd-reload.sh
-format-foreground = ${colors.primary}
+format-foreground = ${colors.blue}
 
 [module/spotify-next]
 type = custom/script
 exec = echo " 󰒭"
 format = <label>
 click-left = spt pb --next
-format-foreground = ${colors.primary}
+format-foreground = ${colors.blue}
 
 ;================================
 ;   Misc
@@ -187,43 +187,44 @@ interval = 1
 date = %a, %h %d - %I:%M
 
 label = %date%
-label-foreground = ${colors.secondary}
+label-foreground = ${colors.yellow}
 
 [module/spacer]
 type = custom/script
 exec = echo "  "
 format = <label>
-format-foreground = ${colors.highlight}
+format-foreground = ${colors.red}
 
 [module/powermenu]
 type = custom/menu
 
-format-foreground = ${colors.primary}
+format-foreground = ${colors.blue}
 format-background = ${colors.xcolor0}
 
 
 label-open = "⏻"
-label-foreground = ${colors.secondary}
+label-foreground = ${colors.yellow}
 label-open-font = 4
 label-close = ""
-label-close-foreground = ${colors.primary}
+label-close-foreground = ${colors.blue}
 label-separator = " | "
-separator-foreground = ${colors.highlight}
-label-separator-foreground = ${colors.highlight}
+separator-foreground = ${colors.red}
+label-separator-foreground = ${colors.red}
+expand-right = false
 
 
 ; reboot
 menu-0-1 = " Reboot"
 menu-0-1-exec = systemctl reboot
-menu-0-1-foreground = ${colors.secondary}
+menu-0-1-foreground = ${colors.yellow}
 ; shutdown
 menu-0-0 = " Shutdown"
 menu-0-0-exec = systemctl poweroff
-menu-0-0-foreground = ${colors.secondary}
+menu-0-0-foreground = ${colors.yellow}
 ; sleep
 menu-0-2 = "⏾ Sleep"
 menu-0-2-exec = systemctl suspend
-menu-0-2-foreground = ${colors.secondary}
+menu-0-2-foreground = ${colors.yellow}
 
 [settings]
 screenchange-reload = true
