--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -40,8 +40,8 @@ ws-icon-0 = 1;󰎤
 ws-icon-1 = 2;󰎧
 ws-icon-2 = 3;󰎪
 ws-icon-3 = 4;󰎭
-ws-icon-4 = 9;󰎼
-ws-icon-5 = 0;󰎡
+ws-icon-4 = z;󰬡
+ws-icon-5 = x;󰬟
 ws-icon-default = 
 
 [module/xwindow]
@@ -128,11 +128,11 @@ format-volume = <label-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${colors.yellow}
 
+format-muted-prefix = "󰕾 "
+format-muted-prefix-foreground = ${colors.blue}
+format-muted-prefix-font = 3
 label-muted = muted
 label-muted-foreground = ${colors.yellow}
-
-click-middle = pavucontrol &
-click-right = ~/.config/polybar/scripts/audio.sh swapOutput
 
 [module/audio]
 type = custom/script
@@ -142,6 +142,7 @@ interval = 2.0
 exec = ~/.config/polybar/scripts/audio.sh
 click-right = exec pavucontrol &
 click-left = ~/.config/polybar/scripts/audio.sh swap &
+click-middle = ~/.config/polybar/scripts/audio-reset.sh
 
 ;================================
 ;   Spotify
