--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -181,6 +181,11 @@ format-foreground = ${colors.blue}
 ;   Misc
 ;================================
 
+[module/tray]
+type = internal/tray
+tray-size = 50%
+tray-spacing = 4px
+
 [module/date]
 type = internal/date
 interval = 1
