--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -32,11 +32,11 @@ gray = #abb2bf
 
 [bar/bar1]
 monitor = DP-3
-width = 100%
+width = 99%
 height = 24pt
-;offset-x = 1%
-;offset-y = 1%
-;radius = 9
+offset-x = 0.5%
+# offset-y = 0.5%
+radius-bottom = 16
 font = 0
 
 ; dpi = 96
@@ -47,7 +47,9 @@ foreground = ${colors.white}
 line-size = 3pt
 
 border-bottom-size = 1
-border-color = ${colors.red}
+border-right-size = 1
+border-left-size = 1
+border-color = ${colors.blue}
 
 padding-left = 1
 padding-right = 1
@@ -63,15 +65,12 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm spacer xwindow 
 modules-center = date
-modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer powermenu
+modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer tray spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-tray-position = right
-# tray-right-margin = 10
 
 ; wm-restack = generic
 wm-restack = bspwm
@@ -81,11 +80,11 @@ wm-restack = bspwm
 
 [bar/bar2]
 monitor = DP-1
-width = 100%
+width = 99%
 height = 24pt
-;offset-x = 1%
-;offset-y = 1%
-;radius = 9
+offset-x = 0.5%
+# offset-y = 0.5%
+radius-bottom = 16
 font = 0
 
 ; dpi = 96
@@ -97,7 +96,9 @@ line-size = 3pt
 
 
 border-bottom-size = 1
-border-color = ${colors.red}
+border-left-size = 1
+border-right-size = 1
+border-color = ${colors.blue}
 
 padding-left = 1
 padding-right = 1
