--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -181,6 +181,14 @@ format-foreground = ${colors.blue}
 ;   Misc
 ;================================
 
+[module/powermode]
+type = custom/script
+label = "%output%"
+label-font = 1
+interval = 2.0
+exec = ~/.config/polybar/scripts/power-mode.sh
+click-left = ~/.config/polybar/scripts/power-mode.sh swap &
+
 [module/tray]
 type = internal/tray
 tray-size = 50%
