--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,35 +1,35 @@
-# theme = "doom-one"
+  # Tokyo Night theme, based on both:
+      [colors.primary]
+      #background = '#1a1b26'
+      background = '#1f2335'
+      foreground = '#a9b1d6'
 
-[colors.bright]
-black = "#5c6370"
-blue = "#61afef"
-cyan = "#56b6c2"
-green = "#98c379"
-magenta = "#c678dd"
-red = "#e06c75"
-white = "#ffffff"
-yellow = "#d19a66"
+    [colors.normal]
+      black =   '#32344a'
+      red =     '#f7768e'
+      green =   '#9ece6a'
+      yellow =  '#e0af68'
+      blue =    '#7aa2f7'
+      magenta = '#ad8ee6'
+      cyan =    '#449dab'
+      white =   '#787c99'
 
-[colors.normal]
-black = "#282c34"
-blue = "#51afef"
-cyan = "#46d9ff"
-green = "#98be65"
-magenta = "#c678dd"
-red = "#ff6c6b"
-white = "#bbc2cf"
-yellow = "#ecbe7b"
+    [colors.bright]
+      black =   '#444b6a'
+      red =     '#ff7a93'
+      green =   '#b9f27c'
+      yellow =  '#ff9e64'
+      blue =    '#7da6ff'
+      magenta = '#bb9af7'
+      cyan =    '#0db9d7'
+      white =   '#acb0d0'
 
-[colors.primary]
-background = "#282c34"
-foreground = "#bbc2cf"
+    [font]
+    size = 12.0
 
-[font]
-size = 12.0
+    [font.normal]
+    family = "Hack Nerd Font Mono"
 
-[font.normal]
-family = "Hack Nerd Font Mono"
-
-[window.padding]
-x = 5
-y = 5
+    [window.padding]
+    x = 5
+    y = 5
