--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -65,7 +65,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm spacer xwindow 
 modules-center = date
-modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer tray spacer powermenu
+modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer powermode spacer tray spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -120,8 +120,6 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-;tray-position = right
 
 ; wm-restack = generic
 wm-restack = bspwm
