--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -32,11 +32,8 @@ gray = #abb2bf
 
 [bar/bar1]
 monitor = DP-3
-width = 99%
+width = 100%
 height = 24pt
-offset-x = 0.5%
-# offset-y = 0.5%
-radius-bottom = 16
 font = 0
 
 ; dpi = 96
@@ -47,8 +44,6 @@ foreground = ${colors.white}
 line-size = 3pt
 
 border-bottom-size = 1
-border-right-size = 1
-border-left-size = 1
 border-color = ${colors.blue}
 
 padding-left = 1
@@ -65,7 +60,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 
 modules-left = bspwm spacer xwindow 
 modules-center = date
-modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer powermode spacer tray spacer powermenu
+modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer powermode spacer tray powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -80,11 +75,8 @@ wm-restack = bspwm
 
 [bar/bar2]
 monitor = DP-1
-width = 99%
+width = 100%
 height = 24pt
-offset-x = 0.5%
-# offset-y = 0.5%
-radius-bottom = 16
 font = 0
 
 ; dpi = 96
@@ -96,8 +88,6 @@ line-size = 3pt
 
 
 border-bottom-size = 1
-border-left-size = 1
-border-right-size = 1
 border-color = ${colors.blue}
 
 padding-left = 1
