--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
   # Tokyo Night theme, based on both:
       [colors.primary]
-      #background = '#1a1b26'
-      background = '#1f2335'
+      background = '#1a1b26'
+      #background = '#1f2335'
       foreground = '#a9b1d6'
 
     [colors.normal]
