--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -133,9 +133,9 @@ fade-out-step = 0.03;
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-  opacity-rule = [
-	"90:class_g = 'Alacritty'", 
-];
+#  opacity-rule = [
+#	"90:class_g = 'Alacritty'", 
+#];
 
 
 #################################
