--- a/macbook/alacritty/alacritty.toml
+++ b/macbook/alacritty/alacritty.toml
@@ -1,7 +1,15 @@
+########################################################################
+# ░█████╗░██╗░░░░░░█████╗░░█████╗░██████╗░██╗████████╗████████╗██╗░░░██╗
+# ██╔══██╗██║░░░░░██╔══██╗██╔══██╗██╔══██╗██║╚══██╔══╝╚══██╔══╝╚██╗░██╔╝
+# ███████║██║░░░░░███████║██║░░╚═╝██████╔╝██║░░░██║░░░░░░██║░░░░╚████╔╝░
+# ██╔══██║██║░░░░░██╔══██║██║░░██╗██╔══██╗██║░░░██║░░░░░░██║░░░░░╚██╔╝░░
+# ██║░░██║███████╗██║░░██║╚█████╔╝██║░░██║██║░░░██║░░░░░░██║░░░░░░██║░░░
+# ╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝░╚════╝░╚═╝░░╚═╝╚═╝░░░╚═╝░░░░░░╚═╝░░░░░░╚═╝░░░
+########################################################################
+
   # Tokyo Night theme, based on both:
-      [colors.primary]
-      #background = '#1a1b26'
-      background = '#1f2335'
+    [colors.primary]
+      background = '#1a1b26'
       foreground = '#a9b1d6'
 
     [colors.normal]
@@ -25,11 +33,10 @@
       white =   '#acb0d0'
 
     [font]
-    size = 10.0
+      size = 10.0
 
     [font.normal]
-    family = "Hack Nerd Font Mono"
+      family = "Hack Nerd Font Mono"
 
     [window.padding]
-    x = 5
-    y = 5
+      x = 5
