--- a/macbook/polybar/config.ini
+++ b/macbook/polybar/config.ini
@@ -12,14 +12,14 @@
 include-file = modules.ini
 
 [colors]
-background = #aa282c34
-black = #282c34
+background = #aa1a1b26
+black = #32344a
 white = #bbc2cf
-red = #ff6c6b
-blue = #51afef
-yellow = #ecbe7b
-purple = #c678dd
-gray = #abb2bf 
+red = #f7768e
+blue = #7aa2f7
+yellow = #e0af68
+purple = #ad8ee6
+gray = #787c99 
 
 # background = #aa282c34
 # background2 = #282c34
@@ -32,11 +32,8 @@ gray = #abb2bf
 
 [bar/bar1]
 monitor = eDP-1
-width = 99%
+width = 100%
 height = 24pt
-offset-x = 0.5%
-offset-y = 0.5%
-radius = 16
 font = 0
 
 ; dpi = 96
@@ -46,7 +43,7 @@ foreground = ${colors.white}
 
 line-size = 3pt
 
-border-size = 1
+border-bottom-size = 1
 border-color = ${colors.blue}
 
 padding-left = 1
