--- a/macbook/polybar/config.ini
+++ b/macbook/polybar/config.ini
@@ -55,6 +55,7 @@ module-margin = 0
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
+font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = bspwm spacer xwindow 
 modules-center = date
