--- a/macbook/polybar/modules.ini
+++ b/macbook/polybar/modules.ini
@@ -92,7 +92,7 @@ label-foreground = ${colors.yellow}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "󰍛 "
+format-prefix = " "
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
 label = %used%
