--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -54,10 +54,11 @@ module-margin = 0
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
+font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = bspwm xwindow 
 modules-center = date
-modules-right = spotify-prev spotify-play spotify-next spacer pulseaudio spacer audio spacer powermode spacer tray powermenu
+modules-right = spotify-prev spotify-play spotify-next spacer xkeyboard spacer audio pulseaudio spacer powermode spacer tray spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
