--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -93,7 +93,7 @@ label-foreground = ${colors.yellow}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "󰍛 "
+format-prefix = " "
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
 label = %used%
@@ -121,15 +121,13 @@ label-unmounted-foreground = ${colors.gray}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "󰕾 "
-format-volume-prefix-foreground = ${colors.blue}
-format-volume-prefix-font = 3
+format-volume-prefix = " "
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 label-volume-foreground = ${colors.yellow}
 
-format-muted-prefix = "󰕾 "
+format-muted-prefix = " "
 format-muted-prefix-foreground = ${colors.blue}
 format-muted-prefix-font = 3
 label-muted = muted
@@ -138,7 +136,8 @@ label-muted-foreground = ${colors.yellow}
 [module/audio]
 type = custom/script
 label = "%output%"
-label-font = 1
+label-font = 4
+label-foreground = ${colors.blue}
 interval = 2.0
 exec = ~/.config/polybar/scripts/audio.sh
 click-right = exec pavucontrol &
@@ -185,7 +184,8 @@ format-foreground = ${colors.blue}
 [module/powermode]
 type = custom/script
 label = "%output%"
-label-font = 1
+label-foreground = ${colors.blue}
+label-font = 3
 interval = 2.0
 exec = ~/.config/polybar/scripts/power-mode.sh
 click-left = ~/.config/polybar/scripts/power-mode.sh swap &
@@ -204,6 +204,20 @@ date = %a, %h %d - %I:%M
 label = %date%
 label-foreground = ${colors.yellow}
 
+[module/xkeyboard]
+type = internal/xkeyboard
+
+format-prefix = " "
+format-prefix-foreground = ${colors.blue}
+format-prefix-font = 3
+
+format= <label-layout> 
+label-layout-foreground = ${colors.yellow}
+label-layout = %layout%
+
+click-left = switch
+
+#format-volume-prefix-font = 3
 [module/spacer]
 type = custom/script
 exec = echo "  "
@@ -217,7 +231,7 @@ format-foreground = ${colors.blue}
 format-background = ${colors.xcolor0}
 
 
-label-open = " ⏻"
+label-open = "⏻"
 label-foreground = ${colors.yellow}
 label-open-font = 4
 label-close = ""
