--- a/macbook/polybar/modules.ini
+++ b/macbook/polybar/modules.ini
@@ -15,34 +15,26 @@
 
 [module/bspwm]
 type = internal/bspwm
-label-focused-font = 2
-label-occupied-font = 2
-label-urgent-font = 2
-label-empty-font = 2
+label-focused-font = 4
+label-occupied-font = 4
+label-urgent-font = 4
+label-empty-font = 4
 
-label-focused = %icon%
+label-focused = 
 label-focused-padding = 1
-label-focused-foreground = ${colors.red}
+label-focused-foreground = ${colors.blue}
 
-label-occupied = %icon%
+label-occupied = 
 label-occupied-padding = 1
 label-occupied-foreground = ${colors.blue}
 
-label-urgent = %icon%
+label-urgent = 
 label-urgent-background = ${colors.purple}
 label-urgent-padding = 1
 
-label-empty = %icon%
-label-empty-foreground = ${colors.gray}
+label-empty = 
+label-empty-foreground = ${colors.blue}
 label-empty-padding = 1
-
-ws-icon-0 = 1;󰎤
-ws-icon-1 = 2;󰎧
-ws-icon-2 = 3;󰎪
-ws-icon-3 = 4;󰎭
-ws-icon-4 = z;󰬡
-ws-icon-5 = x;󰬟
-ws-icon-default = 
 
 [module/xwindow]
 type = internal/xwindow
