even more polybar tweaks

--- a/macbook/polybar/modules.ini
+++ b/macbook/polybar/modules.ini
@@ -197,7 +197,7 @@ label-foreground = ${colors.yellow}
 
 [module/spacer]
 type = custom/script
-exec = echo "  "
+exec = echo " ⏽ "
 format = <label>
 format-foreground = ${colors.red}
 
