--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -212,7 +212,7 @@ click-left = switch
 #format-volume-prefix-font = 3
 [module/spacer]
 type = custom/script
-exec = echo "  "
+exec = echo " ⏽ "
 format = <label>
 format-foreground = ${colors.red}
 
