--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,6 +16,7 @@ red = #f7768e
 blue = #7aa2f7
 yellow = #e0af68
 purple = #ad8ee6
+cyan = #449dab
 gray = #787c99 
 
 [bar/bar1]
@@ -32,7 +33,7 @@ foreground = ${colors.white}
 line-size = 3pt
 
 border-bottom-size = 1
-border-color = ${colors.blue}
+border-color = ${colors.black}
 
 padding-left = 1
 padding-right = 1
@@ -77,7 +78,7 @@ line-size = 3pt
 
 
 border-bottom-size = 1
-border-color = ${colors.blue}
+border-color = ${colors.black}
 
 padding-left = 1
 padding-right = 1
