fixed lt polybar config

--- a/macbook/polybar/config.ini
+++ b/macbook/polybar/config.ini
@@ -10,7 +10,7 @@
 include-file = modules.ini
 
 [colors]
-background = #661a1b26
+background = #66282c34
 black = #32344a
 white = #bbc2cf
 red = #f7768e
@@ -33,7 +33,7 @@ foreground = ${colors.white}
 line-size = 3pt
 
 border-bottom-size = 1
-border-color = ${colors.blue}
+border-color = ${colors.black}
 
 padding-left = 1
 padding-right = 1
@@ -48,7 +48,7 @@ font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
-modules-left = bspwm spacer xwindow 
+modules-left = bspwm xwindow 
 modules-center = date
 modules-right = spotify-prev spotify-play spotify-next spacer updates-arch spacer cpu spacer memory spacer filesystem spacer pulseaudio spacer tray spacer powermenu
 
