--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -24,6 +24,7 @@ monitor = DP-3
 width = 100%
 height = 20pt
 font = 0
+fixed-center = true
 
 ; dpi = 96
 
@@ -68,6 +69,7 @@ monitor = DP-1
 width = 100%
 height = 20pt
 font = 0
+fixed-center = true
 
 ; dpi = 96
 
@@ -91,6 +93,7 @@ module-margin = 0
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
+font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = bspwm spotify
 modules-center = date
