--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -51,7 +51,7 @@ font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = bspwm xwindow 
 modules-center = date
-modules-right = spotify-prev spotify-play spotify-next spacer xkeyboard spacer audio pulseaudio spacer powermode spacer tray spacer powermenu
+modules-right = spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer tray spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
