--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -33,6 +33,8 @@ play = [
 
 [open]
 rules = [
+    # Folder
+	{ name = "*/", use = [ "edit", "open", "reveal" ] },
 	# Text
 	{ mime = "text/*", use = [ "edit", "reveal" ] },
 	# Image
