--- a/starship.toml
+++ b/starship.toml
@@ -1,7 +1,6 @@
 format = """
-$username\
+$jobs\
 [ ](#7aa2f7)\
-$hostname\
 $directory\
 $git_branch\
 $git_state\
@@ -12,42 +11,47 @@ $python\
 $character"""
 
 [directory]
-style = "#7aa2f7"
+style = '#7aa2f7'
 read_only_style = '#f7768e' 
 format = '[$read_only]($read_only_style)[$path]($style)'
 truncation_length = 10
 truncation_symbol = '…/'
 
 [character]
-success_symbol = "[❯](#7aa2f7)"
-error_symbol = "[❯](#f7768e)"
-vimcmd_symbol = "[](#e0af68)"
+success_symbol = '[❯](#7aa2f7)'
+error_symbol = '[❯](#f7768e)'
+vimcmd_symbol = '[](#e0af68)'
 
 [git_branch]
-format = " [$symbol $branch]($style) "
-style = "#ad8ee6"
+format = ' [$symbol $branch]($style) '
+style = '#ad8ee6'
 symbol = ''
 
 [git_status]
-format = "[[($conflicted$untracked$modified$staged$renamed$deleted)](#f7768e) ($ahead_behind$stashed)]($style)"
-style = "cyan"
-conflicted = " "
-untracked = "󰜛 " 
-modified = "󰜜 "
-staged = "󰜘 "
-renamed = "​"
-deleted = "​"
-stashed = "≡ "
+format = '[[($conflicted$untracked$modified$staged$renamed$deleted)](#f7768e) ($ahead_behind$stashed)]($style)'
+style = 'cyan'
+conflicted = ' '
+untracked = '󰜛 ' 
+modified = '󰜜 '
+staged = '󰜘 '
+renamed = '​'
+deleted = '​'
+stashed = '≡ '
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
-style = "bright-black"
+style = 'bright-black'
 
 [cmd_duration]
-format = " [$duration]($style) "
-style = "#e0af68"
+format = ' [$duration]($style) '
+style = '#e0af68'
 
 [python]
-format = "[$virtualenv]($style) "
-style = "bright-black"
+format = '[$virtualenv]($style) '
+style = 'bright-black'
 
+[jobs]
+symbol = ' '
+style = '#f7768e'
+number_threshold = 1
+format = '[$symbol]($style)'
