--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,15 +9,15 @@
 
 include-file = modules.ini
 [colors]
-background = #66282c34
-black = #32344a
-white = #a9b1d6
-red = #f7768e
-blue = #7aa2f7
-yellow = #e0af68
-purple = #ad8ee6
-cyan = #449dab
-gray = #787c99 
+background = #66222436
+black = #1b1d2b
+white = #c8d3f5
+red = #ff757f
+blue = #82aaff
+yellow = #ffc777
+purple = #c099ff
+cyan = #86e1fc
+gray = #828bb8 
 
 [bar/bar1]
 monitor = DP-3
