updated macbook configs

--- a/macbook/polybar/config.ini
+++ b/macbook/polybar/config.ini
@@ -10,14 +10,14 @@
 include-file = modules.ini
 
 [colors]
-background = #66282c34
-black = #32344a
-white = #bbc2cf
-red = #f7768e
-blue = #7aa2f7
-yellow = #e0af68
-purple = #ad8ee6
-gray = #787c99 
+background = #66222436
+black = #1b1d2b
+white = #c8d3f5
+red = #ff757f
+blue = #82aaff
+yellow = #ffc777
+purple = #c099ff
+gray = #828bb8 
 
 [bar/bar1]
 monitor = eDP-1
