--- a/i3blocks/config-right.conf
+++ b/i3blocks/config-right.conf
@@ -14,12 +14,18 @@
 #╚═╝░░╚═╝╚═╝░╚═════╝░╚═╝░░╚═╝░░░╚═╝░░░#
 #######################################
 
-separator_block_width=15
+separator_block_width=20
 
 [pacman]
 interval=60
 command=checkupdates | wc -l
 label= 
+color=#77aaff
+
+[cpu]
+interval=5
+command=scripts/test.sh
+label= 
 color=#77aaff
 
 [temp]
