--- a/i3blocks/config-right.conf
+++ b/i3blocks/config-right.conf
@@ -14,7 +14,7 @@
 #╚═╝░░╚═╝╚═╝░╚═════╝░╚═╝░░╚═╝░░░╚═╝░░░#
 #######################################
 
-separator_block_width=20
+separator_block_width=15
 
 [pacman]
 interval=60
@@ -24,7 +24,7 @@ color=#77aaff
 
 [cpu]
 interval=5
-command=scripts/test.sh
+command=scripts/cpu.sh
 label= 
 color=#77aaff
 
