--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -27,6 +27,8 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar &
 exec-once = hyprpaper &
+exec-once = swaync &
+exec-once = hypridle &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -113,6 +115,7 @@ dwindle {
 master {
     new_status = slave
     no_gaps_when_only = 1
+    mfact = 0.50
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
