--- a/archbook/hypr/hyprlock.conf
+++ b/archbook/hypr/hyprlock.conf
@@ -1,8 +1,9 @@
-source = $HOME/.config/hypr/mocha.conf
 
 $accent = $mauve
 $accentAlpha = $mauveAlpha
 $font = JetBrainsMono Nerd Font
+
+@define-color black #222436
 
 # GENERAL
 general {
@@ -22,9 +23,9 @@ background {
 label {
   monitor =
   text = $TIME
-  color = $text
+  color = rgb(7aa2f7)
   font_size = 90
-  font_family = $font
+  font_family = Hack Nerd Font
   position = -30, 0
   halign = right
   valign = top
@@ -34,9 +35,9 @@ label {
 label {
   monitor =
   text = cmd[update:43200000] date +"%A, %d %B %Y"
-  color = $text
+  color = rgb(7aa2f7)
   font_size = 25
-  font_family = $font
+  font_family = Hack Nerd Font
   position = -30, -150
   halign = right
   valign = top
@@ -56,23 +57,23 @@ image {
 # INPUT FIELD
 input-field {
   monitor =
-  size = 60, 60
+  size = 300, 60
   outline_thickness = 4
   dots_size = 0.2
   dots_spacing = 0.2
   dots_center = true
-  outer_color = $accent
-  inner_color = $surface0
-  font_color = $text
+  outer_color = rgb(1b1c2b)
+  inner_color = rgb(222436)
+  font_color = rgb(7aa2f7)
   fade_on_empty = true
-  # placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
-  hide_input = true
+  hide_input = false
   check_color = $accent
-  fail_color = $red
+  fail_color = rgb(f7768e)
   fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
   capslock_color = $yellow
-  position = 0, -47
+  position = 0, -200
   halign = center
   valign = center
 }
 
+  # color = rgb(7aa2f7)
