hypr and waybar configs

--- a/archbook/hypr/hyprlock.conf
+++ b/archbook/hypr/hyprlock.conf
@@ -25,7 +25,7 @@ background {
 label {
   monitor =
   text = $TIME
-  color = rgb(7aa2f7)
+  color = rgb(8aadf4)
   font_size = 90
   font_family = Hack Nerd Font
   position = -30, 0
@@ -37,7 +37,7 @@ label {
 label {
   monitor =
   text = cmd[update:43200000] date +"%A, %d %B %Y"
-  color = rgb(7aa2f7)
+  color = rgb(8aadf4)
   font_size = 25
   font_family = Hack Nerd Font
   position = -30, -150
@@ -64,15 +64,15 @@ input-field {
   dots_size = 0.2
   dots_spacing = 0.2
   dots_center = true
-  outer_color = rgb(1b1c2b)
-  inner_color = rgb(222436)
-  font_color = rgb(7aa2f7)
+  outer_color = rgb(494d64)
+  inner_color = rgb(24273a)
+  font_color = rgb(8aadf4)
   fade_on_empty = true
   hide_input = false
   check_color = $accent
-  fail_color = rgb(f7768e)
+  fail_color = rgb(ed8796)
   fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-  capslock_color = $yellow
+  capslock_color = rgb(eed49f)
   position = 0, -200
   halign = center
   valign = center
