--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -20,7 +20,7 @@ exec-once = hypridle &
 ### monitors ###
 ################
 
-monitor=,1920x1080,auto,1.2
+monitor=,1920x1080,auto,1
 
 #########################
 ### program variables ###
@@ -46,7 +46,7 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 1
-    col.active_border = rgb(7aa2f7)
+    col.active_border = rgb(8aadf4)
     resize_on_border = false
     allow_tearing = false
     layout = master
@@ -110,6 +110,8 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    force_no_accel = false
+    accel_profile = "adaptive" #flat
 
     touchpad {
         natural_scroll = false
