--- a/archbook/waybar/config.jsonc
+++ b/archbook/waybar/config.jsonc
@@ -23,7 +23,7 @@
   "custom/pacman": {
     "interval": 180,
     "exec": "checkupdates | wc -l",
-    "format": "<span foreground='#e0af68'></span> {}"
+    "format": "<span foreground='#eed49f'></span> {}"
   },
   "clock": {
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
@@ -39,7 +39,7 @@
         "on": " "
     },
     "random-icons": {
-        "off": "<span color=\"#f53c3c\"></span> ",
+        "off": "<span color=\"#ed8796\"></span> ",
         "on": " "
     },
     "repeat-icons": {
@@ -58,7 +58,7 @@
         "car": "",
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
-    "format": "{volume}% <span foreground='#e0af68'>{icon}</span>",
+    "format": "{volume}% <span foreground='#eed49f'>{icon}</span>",
     "format-bluetooth": "{volume}% {icon} {format_source}",
     "format-bluetooth-muted": " {icon} {format_source}",
     "format-source": "{volume}% ",
@@ -76,28 +76,28 @@
     // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
     "critical-threshold": 80,
     // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C <span foreground='#e0af68'>{icon}</span>",
+    "format": "{temperatureC}°C <span foreground='#eed49f'>{icon}</span>",
     "format-icons": ["", "", ""],
     "tooltip": false
   },
   "cpu": {
-    "format": "{usage}% <span foreground='#e0af68'> </span>",
+    "format": "{usage}% <span foreground='#eed49f'> </span>",
   },
   "memory": {
-    "format": "{used}GB <span foreground='#e0af68'> </span>",
+    "format": "{used}GB <span foreground='#eed49f'> </span>",
     "tooltip": false
   },
   "disk": {
-    "format": "{percentage_used}% <span foreground='#e0af68'>󰋊</span>"
+    "format": "{percentage_used}% <span foreground='#eed49f'>󰋊</span>"
     },
   "backlight": {
-    "format": "{percent}% <span foreground='#e0af68'>{icon}</span>",
+    "format": "{percent}% <span foreground='#eed49f'>{icon}</span>",
     "format-icons": ["", "", "", "", "", "", "", "", ""],
     "tooltip": false
   },
   "network": {
     // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "{essid} ({signalStrength}%) <span foreground='#e0af68'> </span>",
+    "format-wifi": "{essid} ({signalStrength}%) <span foreground='#eed49f'> </span>",
     "tooltip-format": "{ifname} via {gwaddr} ",
     "format-linked": "{ifname} (No IP) ",
     "format-disconnected": "Disconnected ⚠",
@@ -109,7 +109,7 @@
         "warning": 30,
         "critical": 15
     },
-    "format": "{capacity}% <span foreground='#e0af68'>{icon} </span>",
+    "format": "{capacity}% <span foreground='#eed49f'>{icon} </span>",
     "format-full": "{capacity}% {icon}",
     "format-charging": "{capacity}% ",
     "format-plugged": "{capacity}% ",
