--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,40 +1,42 @@
+#######################################
+#████████╗███╗░░░███╗██╗░░░██╗██╗░░██╗#
+#╚══██╔══╝████╗░████║██║░░░██║╚██╗██╔╝#
+#░░░██║░░░██╔████╔██║██║░░░██║░╚███╔╝░#
+#░░░██║░░░██║╚██╔╝██║██║░░░██║░██╔██╗░#
+#░░░██║░░░██║░╚═╝░██║╚██████╔╝██╔╝╚██╗#
+#░░░╚═╝░░░╚═╝░░░░░╚═╝░╚═════╝░╚═╝░░╚═╝#
+#######################################
+
 set -g prefix C-f
+set -g prefix2 C-m
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
-unbind ,
-unbind .
 
 set-option -g status-position top
 set -g base-index 1
-set -g default-terminal "tmux-256color"
 
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind-key , previous-window
-bind-key . next-window
+set -g default-terminal xterm-256color
 
-# List of plugins
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavor 'macchiato'
 
-# Catppuccin
-set -g @plugin 'catppuccin/tmux' # See https://github.com/catppuccin/tmux/tags for additional tags
-set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato or mocha
-
+# Load catppuccin
 run ~/.config/tmux/plugins/tmux/catppuccin.tmux
 
-set -g @catppuccin_status_connect_separator "yes"
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_window_number_position "right"
-
+# Make the status line pretty and add some modules
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left ""
 set -g status-left "#{E:@catppuccin_status_session}"
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+
 run '~/.config/tmux/plugins/tpm/tpm'
