tweaked hypr install configs

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -92,8 +92,8 @@ master {
 }
 
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 #############
@@ -118,6 +118,7 @@ input {
         scroll_factor = .4
         clickfinger_behavior = true
     }
+
 }
 
 gestures {
@@ -125,7 +126,7 @@ gestures {
 }
 
 device {
-    name = epic-mouse-v1
+    name = logitech-m305
     sensitivity = -0.5
 }
 
@@ -149,7 +150,7 @@ bind = $mainMod, W, exec, firefox
 # Window control
 
 bind = $mainMod, S, togglefloating,
-bind = $mainMod, A, fullscreen, 0
+bind = $mainMod, A, fullscreen, 1
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
