some config changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,13 +7,13 @@
 #░░░╚═╝░░░╚═╝░░░░░╚═╝░╚═════╝░╚═╝░░╚═╝#
 #######################################
 
-set -g prefix C-f
-set -g prefix2 C-m
+set -g prefix C-space
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
 set-option -g status-position top
 set -g base-index 1
+set -g pane-base-index 1
 
 bind-key h select-pane -L
 bind-key j select-pane -D
