swapped terminal in hyprland.conf

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -27,7 +27,7 @@ monitor=,1920x1080,auto,1
 #########################
 
 # Set programs that you use
-$terminal = kitty
+$terminal = wezterm
 $fileManager = nemo
 $menu = wofi --show drun
 
