added mouse to hyprland.conf

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -126,8 +126,8 @@ gestures {
 }
 
 device {
-    name = logitech-m305
-    sensitivity = -0.5
+    name = logi-m240-mouse
+    sensitivity = -0.8
 }
 
 ###################
