--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -214,7 +214,7 @@ click-left = switch
 type = custom/script
 exec = echo " ⏽ "
 format = <label>
-format-foreground = ${colors.red}
+format-foreground = ${colors.yellow}
 
 [module/powermenu]
 type = custom/menu
