--- a/i3/config
+++ b/i3/config
@@ -35,6 +35,7 @@ bindsym $mod+Return exec --no-startup-id wezterm
 bindsym $mod+w exec firefox
 bindsym $mod+Control+w exec firefox --private-window
 bindsym $mod+e exec nemo
+bindsym $mod+Control+p exec --no-startup-id --no-startup-id ~/.config/polybar/launch.sh
 
 # change focus
 bindsym $mod+h focus left
