--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,15 +9,20 @@
 
 include-file = modules.ini
 [colors]
-background = #66222436
-black = #1b1d2b
-white = #c8d3f5
-red = #ff757f
-blue = #82aaff
-yellow = #ffc777
-purple = #c099ff
-cyan = #86e1fc
-gray = #828bb8 
+background = #24273a
+foreground = #cad3f5
+black = #494d64
+white = #b8c0e0
+red = #ed8796
+blue = #8aadf4
+yellow = #eed49f
+purple = #f5bde6
+cyan = #8db5ca
+gray = #b8c0e0 
+
+mauve = #c6a0f6
+peach = #f5a97f
+darker = #181926
 
 [bar/bar1]
 monitor = DP-3
@@ -36,8 +41,7 @@ line-size = 3pt
 border-bottom-size = 1
 border-color = ${colors.black}
 
-padding-left = 1
-padding-right = 1
+padding = 0
 
 module-margin = 0
 
@@ -49,9 +53,9 @@ font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
-modules-left = bspwm xwindow 
-modules-center = date
-modules-right = spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer tray spacer powermenu
+modules-left = date spacer firefox obsidian files xkeyboard left
+modules-center = right 3space i3 3space left
+modules-right = right 1space game spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -82,9 +86,6 @@ line-size = 3pt
 border-bottom-size = 1
 border-color = ${colors.black}
 
-padding-left = 1
-padding-right = 1
-
 module-margin = 0
 
 ;separator = 
@@ -95,9 +96,9 @@ font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
-modules-left = bspwm spotify
-modules-center = date
-modules-right = updates-arch spacer temperature spacer cpu spacer memory spacer filesystem
+modules-left = 1space filesystem spacer memory spacer cpu spacer temperature spacer updates-arch 1space left
+modules-center = right 3space i3 3space left
+modules-right = right 1space tray spacer date 1space
 
 cursor-click = pointer
 cursor-scroll = ns-resize
