--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -9,36 +9,78 @@
 #              █░▀░█ █▄█ █▄▀ █▄█ █▄▄ ██▄ ▄█                 #
 #############################################################
 
+[module/left]
+type = custom/script
+exec = echo ""
+format = <label>
+format-foreground = ${colors.darker}
+format-background = ${colors.background}
+format-font = 2
+
+[module/right]
+type = custom/script
+exec = echo ""
+format = <label>
+format-foreground = ${colors.darker}
+format-background = ${colors.background}
+format-font = 2
+
 ;================================
 ;   Workspaces & Windows 
 ;================================
 
-[module/bspwm]
-type = internal/bspwm
+[module/i3]
+type = internal/i3
+pin-workspaces = true
 
-label-focused-font = 4
-label-occupied-font = 4
-label-urgent-font = 4
-label-empty-font = 4
+# ws-icon-0 = 1;󰲠
+# ws-icon-1 = 2;󰲢
+# ws-icon-2 = 3;󰲤
+# ws-icon-3 = 4;󰲦
 
-label-focused = 
-label-focused-padding-right = 1
+# ws-icon-4 = 5;󰲨
+# ws-icon-5 = 6;󰲪
+# ws-icon-6 = 7;󰲬
+# ws-icon-7 = 8;󰲮
+
+ws-icon-0 = 1;󰎤
+ws-icon-1 = 2;󰎧
+ws-icon-2 = 3;󰎪
+ws-icon-3 = 4;󰎭
+
+ws-icon-4 = 5;󰎱
+ws-icon-5 = 6;󰎳
+ws-icon-6 = 7;󰎶
+ws-icon-7 = 8;󰎹
+
+label-focused = %icon%
 label-focused-foreground = ${colors.blue}
+label-focused-background = ${colors.darker}
+label-focused-font = 2
 
-label-occupied = 
-label-occupied-padding-right = 1
-label-occupied-foreground = ${colors.blue}
 
-label-urgent = 
-label-urgent-background-right = ${colors.purple}
-label-urgent-padding = 1
+label-unfocused = %icon%
+label-unfocused-foreground = ${colors.black}
+label-unfocused-background = ${colors.darker}
+label-unfocused-font = 2
 
-label-empty = 
-label-empty-foreground = ${colors.blue}
-label-empty-padding-right = 1
+label-visible = %icon%
+label-visible-foreground = ${colors.black}
+label-visible-background = ${colors.darker}
+label-visible-font = 2
+
+label-urgent = %icon%
+label-urgent-foreground = ${colors.purple}
+label-urgent-background = ${colors.darker}
+label-urgen-font = 2
+
+label-separator = " ⏽ "
+label-separator-foreground = ${colors.red}
+label-separator-background = ${colors.darker}
 
 [module/xwindow]
 type = internal/xwindow
+label-padding = 2
 label = %title:0:30:...%
 label-foreground = ${colors.yellow}
 
@@ -53,8 +95,10 @@ format = <label>
 format-prefix = "󰮯 "
 format-prefix-font = 3
 format-prefix-foreground = ${colors.blue}
+format-prefix-background = ${colors.darker}
 label = %output%
 label-foreground = ${colors.yellow}
+label-background = ${colors.darker}
 interval = 600
 click-left = exec ~/.config/polybar/scripts/pacman.sh
 
@@ -64,6 +108,7 @@ base-temperature=20
 warn-temperature=75
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
+format-background = ${colors.darker}
 label = %temperature-c%
 label-foreground = ${colors.yellow}
 label-warn-foreground = ${colors.purple}
@@ -76,6 +121,7 @@ hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp3_input
 [module/cpu]
 type = internal/cpu
 interval = 2
+format-background = ${colors.darker}
 format-prefix = ""
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
@@ -85,6 +131,7 @@ label-foreground = ${colors.yellow}
 [module/memory]
 type = internal/memory
 interval = 2
+format-background = ${colors.darker}
 format-prefix = " "
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
@@ -98,13 +145,11 @@ interval = 25
 mount-0 = /
 format-mounted-prefix = "󰋊 "
 format-mounted-prefix-foreground = ${colors.blue}
+format-mounted-prefix-background = ${colors.darker}
 format-mounted-prefix-font = 3
 label-mounted = %percentage_used%%
 label-mounted-foreground = ${colors.yellow}
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.gray}
-
+label-mounted-background = ${colors.darker}
 
 ;================================
 ;   Audio
@@ -114,27 +159,36 @@ label-unmounted-foreground = ${colors.gray}
 type = internal/pulseaudio
 
 format-volume-prefix = " "
+format-volume-prefix-background = ${colors.darker}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 label-volume-foreground = ${colors.yellow}
+label-volume-background = ${colors.darker}
 
 format-muted-prefix = " "
-format-muted-prefix-foreground = ${colors.blue}
+format-muted-prefix-background = ${colors.darker}
 format-muted-prefix-font = 3
-label-muted = muted
+label-muted = 
+label-muted-font = 3
 label-muted-foreground = ${colors.yellow}
+label-muted-background = ${colors.darker}
+label-muted-padding-right = 1
 
 [module/audio]
-type = custom/script
+type = custom/ipc
 label = "%output%"
 label-font = 4
 label-foreground = ${colors.blue}
-interval = 2.0
-exec = ~/.config/polybar/scripts/audio.sh
-click-right = exec pavucontrol &
-click-left = ~/.config/polybar/scripts/audio.sh swap &
-click-middle = ~/.config/polybar/scripts/audio-reset.sh
+label-background = ${colors.darker}
+initial = 1
+hook-0 = ~/.config/polybar/scripts/audio.sh
+hook-1 = ~/.config/polybar/scripts/audio.sh swap &
+hook-2 = exec pavucontrol &
+hook-3 = ~/.config/polybar/scripts/audio-reset.sh
+click-left = "#audio.hook.1"
+click-right = "#audio.hook.2"
+click-middle = "#audio.hook.3"
 
 ;================================
 ;   Spotify
@@ -149,34 +203,93 @@ format-foreground = ${colors.yellow}
 
 [module/spotify-prev]
 type = custom/script
-exec = echo " 󰒮 "
+exec = echo "󰒮 "
 format = <label>
-click-left = spt pb --previous
+click-left = spotify_player playback previous
 format-foreground = ${colors.blue}
+format-background = ${colors.darker}
 
 [module/spotify-play]
 type = custom/script
 exec = echo "󰐎"
 format = <label>
-click-left = spt pb --toggle
+click-left = spotify_player playback play-pause
 click-right = ~/.config/polybar/scripts/spotifyd-reload.sh
 format-foreground = ${colors.blue}
+format-background = ${colors.darker}
 
 [module/spotify-next]
 type = custom/script
 exec = echo " 󰒭"
 format = <label>
-click-left = spt pb --next
+click-left = spotify_player playback next
 format-foreground = ${colors.blue}
+format-background = ${colors.darker}
+
+;================================
+;   Launchers
+;================================
+
+[module/firefox]
+type = custom/script
+exec = echo " "
+format = <label>
+label-font = 3
+# label-padding-left = 1
+format-foreground = ${colors.blue}
+format-background = ${colors.darker}
+click-left = firefox
+
+[module/obsidian]
+type = custom/script
+exec = echo " "
+format = <label>
+label-font = 3
+format-foreground = ${colors.blue}
+format-background = ${colors.darker}
+click-left = obsidian
+
+[module/files]
+type = custom/script
+exec = echo " "
+format = <label>
+label-font = 3
+format-foreground = ${colors.blue}
+format-background = ${colors.darker}
+click-left = thunar
 
 ;================================
 ;   Misc
 ;================================
 
+[module/test]
+type = custom/ipc
+format = <label>
+label = "%output%"
+initial = 1
+hook-0 = ~/.config/polybar/scripts/test.sh
+hook-1 = ~/.config/polybar/scripts/test.sh test1 &
+hook-2 = ~/.config/polybar/scripts/test.sh test2 &
+hook-3 = ~/.config/polybar/scripts/test.sh test3 &
+click-left = "#test.hook.1"
+click-right = "#test.hook.2"
+click-middle = "#test.hook.3"
+
+[module/game]
+type = custom/ipc
+format = <label>
+label = "%output%"
+initial = 1
+hook-0 = ~/.config/polybar/scripts/game.sh
+hook-1 = ~/.config/polybar/scripts/game.sh game &
+click-left = "#game.hook.1"
+label-background = ${colors.darker}
+
 [module/powermode]
 type = custom/script
 label = "%output%"
 label-foreground = ${colors.blue}
+label-background = ${colors.darker}
 label-font = 3
 interval = 2.0
 exec = ~/.config/polybar/scripts/power-mode.sh
@@ -186,41 +299,59 @@ click-left = ~/.config/polybar/scripts/power-mode.sh swap &
 type = internal/tray
 tray-size = 75%
 tray-spacing = 4px
+tray-background = ${colors.darker}
+format-background = ${colors.darker}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %a, %h %d - %I:%M
+date = " %a, %h %d - %I:%M"
 
 label = %date%
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.blue}
+label-background = ${colors.darker}
 
 [module/xkeyboard]
 type = internal/xkeyboard
+format = <label-indicator>
+format-foreground = ${colors.background}
+format-background = ${colors.red}
 
-format-prefix = " "
-format-prefix-foreground = ${colors.blue}
-format-prefix-font = 3
+label-indicator-on = %icon%
+label-indicator-on-capslock = -Caps Lock-
 
-format= <label-layout> 
-label-layout-foreground = ${colors.yellow}
-label-layout = %layout%
-
-click-left = switch
-
-#format-volume-prefix-font = 3
 [module/spacer]
 type = custom/script
 exec = echo " ⏽ "
 format = <label>
-format-foreground = ${colors.yellow}
+format-foreground = ${colors.red}
+format-background = ${colors.darker}
+
+[module/1space]
+type = custom/script
+exec = echo " "
+format = <label>
+format-background = ${colors.darker}
+
+[module/3space]
+type = custom/script
+exec = echo "   "
+format = <label>
+format-background = ${colors.darker}
+
+[module/1spaceb]
+type = custom/script
+exec = echo " "
+format = <label>
 
 [module/powermenu]
 type = custom/menu
 
 format-foreground = ${colors.blue}
-format-background = ${colors.xcolor0}
+format-background = ${colors.darker}
+label-open-padding-right = 1
+label-close-padding-right = 1
 
 
 label-open = "⏻"
@@ -228,6 +359,7 @@ label-foreground = ${colors.yellow}
 label-open-font = 4
 label-close = ""
 label-close-foreground = ${colors.blue}
+label-close-font = 4
 label-separator = " | "
 separator-foreground = ${colors.red}
 label-separator-foreground = ${colors.red}
