--- a/i3/config
+++ b/i3/config
@@ -34,8 +34,7 @@ bindsym $mod+f exec --no-startup-id rofi -show filebrowser
 bindsym $mod+Return exec --no-startup-id wezterm
 bindsym $mod+w exec firefox
 bindsym $mod+Control+w exec firefox --private-window
-bindsym $mod+e exec nemo
-bindsym $mod+Control+p exec --no-startup-id --no-startup-id ~/.config/polybar/launch.sh
+bindsym $mod+e exec thunar
 
 # change focus
 bindsym $mod+h focus left
@@ -168,41 +167,41 @@ client.placeholder      $background $background $foreground $background $backgro
 client.background       $background
 
 # Left bar
-bar {
-        output DP-3
-        status_command i3blocks
-        position top
-        tray_output primary
-        tray_padding 5
-        font pango:Hack Nerd Font Mono 12
-        # tray_padding 0
-        colors {
-          background $background
-          separator $yellow
-          focused_workspace $background $blue $background
-          active_workspace $background $background $blue
-          inactive_workspace $background $background $white
-          urgent_workspace $background $background $red
-        }
-}
+# bar {
+#         output DP-3
+#         status_command i3blocks
+#         position top
+#         tray_output primary
+#         tray_padding 5
+#         font pango:Hack Nerd Font Mono 12
+#         # tray_padding 0
+#         colors {
+#           background $background
+#           separator $yellow
+#           focused_workspace $background $blue $background
+#           active_workspace $background $background $blue
+#           inactive_workspace $background $background $white
+#           urgent_workspace $background $background $red
+#         }
+# }
 
 # Right bar
-bar {
-        output DP-1
-        status_command i3blocks -c ~/.config/i3blocks/config-right.conf
-        position top
-        tray_output none
-        font pango:Hack Nerd Font Mono 12
-        colors {
-          background $background
-          separator $yellow
-          focused_workspace $background $blue $background
-          active_workspace $background $background $blue
-          inactive_workspace $background $background $white
-        }
-}
+# bar {
+#         output DP-1
+#         status_command i3blocks -c ~/.config/i3blocks/config-right.conf
+#         position top
+#         tray_output none
+#         font pango:Hack Nerd Font Mono 12
+#         colors {
+#           background $background
+#           separator $yellow
+#           focused_workspace $background $blue $background
+#           active_workspace $background $background $blue
+#           inactive_workspace $background $background $white
+#         }
+# }
 
-# exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 ################
 #### Starup ####
