--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -36,7 +36,7 @@ fixed-center = true
 background = ${colors.background}
 foreground = ${colors.white}
 
-line-size = 3pt
+line-size = 1pt
 
 border-bottom-size = 1
 border-color = ${colors.black}
@@ -54,7 +54,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = date spacer firefox obsidian files xkeyboard left
-modules-center = right 3space i3 3space left
+modules-center = i3
 modules-right = right 1space game spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
 
 cursor-click = pointer
@@ -80,7 +80,7 @@ fixed-center = true
 background = ${colors.background}
 foreground = ${colors.white}
 
-line-size = 3pt
+line-size = 1pt
 
 
 border-bottom-size = 1
@@ -97,7 +97,7 @@ font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = 1space filesystem spacer memory spacer cpu spacer temperature spacer updates-arch 1space left
-modules-center = right 3space i3 3space left
+modules-center = i3
 modules-right = right 1space tray spacer date 1space
 
 cursor-click = pointer
