--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -33,50 +33,44 @@ format-font = 2
 type = internal/i3
 pin-workspaces = true
 
-# ws-icon-0 = 1;󰲠
-# ws-icon-1 = 2;󰲢
-# ws-icon-2 = 3;󰲤
-# ws-icon-3 = 4;󰲦
+ws-icon-0 = 1;󰬺
+ws-icon-1 = 2;󰬻
+ws-icon-2 = 3;󰬼
+ws-icon-3 = 4;󰬽
 
-# ws-icon-4 = 5;󰲨
-# ws-icon-5 = 6;󰲪
-# ws-icon-6 = 7;󰲬
-# ws-icon-7 = 8;󰲮
+ws-icon-4 = 5;󰬾
+ws-icon-5 = 6;󰬿
+ws-icon-6 = 7;󰭀
+ws-icon-7 = 8;󰭁
 
-ws-icon-0 = 1;󰎤
-ws-icon-1 = 2;󰎧
-ws-icon-2 = 3;󰎪
-ws-icon-3 = 4;󰎭
+# ws-icon-0 = 1;󰎤
+# ws-icon-1 = 2;󰎧
+# ws-icon-2 = 3;󰎪
+# ws-icon-3 = 4;󰎭
 
-ws-icon-4 = 5;󰎱
-ws-icon-5 = 6;󰎳
-ws-icon-6 = 7;󰎶
-ws-icon-7 = 8;󰎹
+# ws-icon-4 = 5;󰎱
+# ws-icon-5 = 6;󰎳
+# ws-icon-6 = 7;󰎶
+# ws-icon-7 = 8;󰎹
 
 label-focused = %icon%
 label-focused-foreground = ${colors.blue}
-label-focused-background = ${colors.darker}
-label-focused-font = 2
+label-focused-font = 4
 
 
 label-unfocused = %icon%
 label-unfocused-foreground = ${colors.black}
-label-unfocused-background = ${colors.darker}
-label-unfocused-font = 2
+label-unfocused-font = 4
 
 label-visible = %icon%
 label-visible-foreground = ${colors.black}
-label-visible-background = ${colors.darker}
-label-visible-font = 2
+label-visible-font = 4
 
 label-urgent = %icon%
 label-urgent-foreground = ${colors.purple}
-label-urgent-background = ${colors.darker}
-label-urgen-font = 2
+label-urgen-font = 4
 
-label-separator = " ⏽ "
-label-separator-foreground = ${colors.red}
-label-separator-background = ${colors.darker}
+label-separator = " "
 
 [module/xwindow]
 type = internal/xwindow
